--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <title>SIXMAR WEB|DEV</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="./bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    <link href="./fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet'
         type='text/css'>
     <link
@@ -23,7 +23,7 @@
         rel='stylesheet' type='text/css'>
 
     <!-- Custom styles for this template -->
-    <link href="./css/clean-blog.css" rel="stylesheet">
+    <link href="/css/clean-blog.css" rel="stylesheet">
 
 </head>
 
